# writing-faster-python3

./: example.py  example2.py  example2_numba.py  example3.py  example4.py  example5_2.py  example5_3.py  example6.py  example7.py  filter_list.py  find_element.py  pyproject.toml
